# togetherwhatbelongs

./: .gitignore  CMakeLists.txt  GitSHAHasher.cpp  OneAheadScanner.cpp  README.md  main.cpp  vcpkg.json
2gth/: .gitignore  README.md  cargo.toml
2gth/src/: main.rs  parser.rs  scanner.rs  tokens.rs
2gth/test/: test.2gth
doc/: Install and use packages with CMake.md
doc/perplexity/: context.txt  init cmake.md  init vcpkg.md  initial project.md
example/: hello.2gth
example/.2gth/: config
example/.2gth/refs/heads/: main
sandboxes/2gtr/: CMakeLists.txt  README.md  main.c  main.cpp  sha-1.h  sha1.cpp  sha1.h  ssh-1.c
sandboxes/2gtr-qt/: CMakeLists.txt
sandboxes/2gtr-sha-1/: CMakeLists.txt  README.md  main.c  sha-1.c  sha-1.h
sandboxes/fnr/fnr/: CMakeLists.txt  README.md  main 2.c  main.c  scanner.c  scanner.h
sandboxes/fnr/fnr.xcodeproj/: project.pbxproj
sandboxes/fnr/fnr.xcodeproj/project.xcworkspace/xcuserdata/thorsten.xcuserdatad/: UserInterfaceState.xcuserstate
sandboxes/fnr/fnr.xcodeproj/xcuserdata/thorsten.xcuserdatad/xcschemes/: xcschememanagement.plist
sandboxes/scan/: CMakeLists.txt  README.md  main.c  oberon.ebnf  parser.c  parser.h  sample-module.2gtr  scanner.h
together/: .gitignore  Cargo.toml  PROMPT.md  README.md  llvm-linux.sh  llvm-mac.sh  oberon-keywords.ebnf  oberon-syntax-rules.ebnf  oberon.ebnf  output  output.c  output.ll  output.s  output_llvm  project-structure.md
together-swift/together/: HTMLPreview.swift
together-swift/together.xcodeproj/project.xcworkspace/xcuserdata/thorsten.xcuserdatad/: UserInterfaceState.xcuserstate
together-swift/together.xcodeproj/xcuserdata/thorsten.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
together-swift/togetherTests/: togetherTests.swift
together-swift/togetherUITests/: togetherUITestsLaunchTests.swift
together/src/: main.rs
together/src/codegen/: c_generator.rs  llvm_generator.rs  mod.rs
together/src/parser/: ast.rs  mod.rs  parser.rs  pretty_printer.rs
together/src/scanner/: lexer.rs  token.rs
together/src/semantic/: mod.rs  symbol_table.rs  type_checker.rs
together/together/: ContentView.swift  HTMLPreview.swift  togetherApp.swift  togetherDocument.swift
together/together.xcodeproj/: project.pbxproj
together/together.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
together/together.xcodeproj/project.xcworkspace/xcuserdata/thorsten.xcuserdatad/: UserInterfaceState.xcuserstate
together/together.xcodeproj/xcuserdata/thorsten.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
together/togetherTests/: togetherTests.swift
together/togetherUITests/: togetherUITests.swift
